Added Fastboot devices and ADB-stater
With ADB starter thes adb starts before the Yuware frame appear. This makes no freezing at clicking on ADB devices button.

Signed-Off by: Somesh Thakur <someshthakur33@gmail.com>